# WAV-Decoder-Encoder

./: CMakeLists.txt  LICENSE  README.md
inc/: Audio.h  Prerequisites.h
src/: Audio.cpp  main.cpp
